Mon Jan 23 14:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * common/ZipCharStream.h:
          Updated include of zziplib.h to zzip/zzip.h to get rid of deprecated
          warnings

Wed Jan  4 22:44:38 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ChangeLog:

          Untabify.
          Delete-trailing-whitespace.

          Changed "add-log-time-format" to a really ugly lambda expression
          that formats changelog timestamps in UTC and works with both GNU
          Emacs and XEmacs.

Thu May 26 07:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * common/XML_Util.h:
          Fixed pragma once warning

Tue May 24 18:39:02 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * common/Makefile.am:

          Regenerate.

        * common/common.mpc:

          Added XML_Util.h to Header_Files section.

Tue May 24 09:18:34 2005  Justin Michel  <michel_j@ociweb.com>

        * tests/util/test.cpp:

          Fixed for loop scoping problem for non-standard compilers.

Mon May 23 14:52:19 2005  Justin Michel  <michel_j@ociweb.com>

        * tests/util/util.mpc:

          Add missing $ Id tag.

Mon May 23 13:02:25 2005  Justin Michel  <michel_j@ociweb.com>

        * common/XML_Util.h:
        * common/XML_Util.cpp:

          Added new ACEXML_escape_string() functions to allow replacement of
          illegal characters, (', ", &, <, >, etc.) with the escaped versions.
          (&quot;, &lt;, etc.)

        * tests/util/test.cpp:
        * tests/util/util.mpc:

          This is a performance test used while making the above functions, and
          testing performance with ACE_String_Base.

Fri Apr 22 21:34:19 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * parser/parser/Parser.cpp (parse_entity_decl):

          Fixed "variable may be used uninitialized" warning.

Fri Apr 22 11:09:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * parser/parser/Makefile.am: